--- a/react/alga-stock/src/shared/Table/Table.scss
+++ b/react/alga-stock/src/shared/Table/Table.scss
@@ -11,7 +11,7 @@ table.AppTable {
       padding: 7px 10px;
       font-size: .8em;
       font-weight: 400;
-      text-transform: uppercase;
+      text-transform: capitalize;
       letter-spacing: .75px;
 
       &.right {
